--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -12,29 +12,29 @@ jobs:
       - name: Install Playwright
         run: npx playwright install --with-deps
       - name: Lint code
-        run: yarn lint:js
+        run: pnpm run lint:js
       - name: Lint styles
-        run: yarn lint:styles
+        run: pnpm run lint:styles
       - name: i18n check (en-US, fr only)
-        run: yarn check:i18n-en-fr
+        run: pnpm run check:i18n-en-fr
       - name: Type check
-        run: yarn typescript
+        run: pnpm run typescript
       - name: Run unit tests
-        run: yarn unit
+        run: pnpm run unit
       - name: Build Storybook
-        run: yarn build-storybook --quiet
+        run: pnpm run build-storybook --quiet
       - name: Serve Storybook and run test runner
         # env: 
         #   ONLY_RUN: SNAPSHOTS
         run: |
           npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
             "npx http-server storybook-static --port 5555 --silent" \
-            "npx wait-on tcp:5555 && yarn test-storybook --ci"
+            "npx wait-on tcp:5555 && pnpm run test-storybook --ci"
       - env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         name: Semantic Release
-        run: yarn semantic-release
+        run: pnpm run semantic-release
 name: Node.js CI
 "on":
   pull_request: null
