--- a/.releaserc
+++ b/.releaserc
@@ -5,7 +5,7 @@
     "@semantic-release/github",
     "@semantic-release/git",
     "@semantic-release/release-notes-generator",
-    "@semantic-release-pnpm"
+    "semantic-release-pnpm"
   ],
   "repositoryUrl": "https://github.com/opentripplanner/otp-ui.git",
   "success": []
