--- a/packages/base-map/package.json
+++ b/packages/base-map/package.json
@@ -10,6 +10,7 @@
   "private": false,
   "dependencies": {
     "maplibre-gl": "^2.1.9",
+    "mapbox-gl": "npm:empty-npm-package@1.0.0",
     "react-map-gl": "^7.0.15",
     "@opentripplanner/building-blocks": "workspace:*"
   },
