--- a/babel.config.json
+++ b/babel.config.json
@@ -14,7 +14,7 @@
     "@babel/plugin-proposal-nullish-coalescing-operator"
   ],
   "presets": [
-    ["@babel/preset-env", { "targets": { "node": "current" } }],
+    ["@babel/preset-env", { "targets": { "node": "12" } }],
     "@babel/preset-typescript",
     "@babel/preset-react"
   ]
