--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "semver": "^7.3.2",
     "storybook": "^8.6.4",
     "storybook-mock-date-decorator": "^2.0.6",
-    "styled-components": "^5.3.0",
+    "styled-components": "catalog:",
     "stylelint": "^10.1.0",
     "stylelint-config-prettier": "^5.2.0",
     "stylelint-config-recommended": "^2.2.0",
