--- a/packages/base-map/package.json
+++ b/packages/base-map/package.json
@@ -17,7 +17,7 @@
   "peerDependencies": {
     "react": "catalog:",
     "@opentripplanner/types": "workspace:*",
-    "styled-components": "^5.3.0"
+    "styled-components": "catalog:"
   },
   "repository": {
     "type": "git",
