--- a/packages/building-blocks/package.json
+++ b/packages/building-blocks/package.json
@@ -15,7 +15,7 @@
   "peerDependencies": {
     "react": "catalog:",
     "react-animate-height": "^3.0.4",
-    "styled-components": "^5.3.0"
+    "styled-components": "catalog:"
   },
   "repository": {
     "type": "git",
