--- a/packages/endpoints-overlay/package.json
+++ b/packages/endpoints-overlay/package.json
@@ -35,6 +35,6 @@
     "react-dom": "^18.2.0",
     "react-intl": "^6.8.4",
     "react-map-gl": "^7.0.15",
-    "styled-components": "^5.3.0"
+    "styled-components": "catalog:"
   }
 }
