--- a/packages/from-to-location-picker/package.json
+++ b/packages/from-to-location-picker/package.json
@@ -18,7 +18,7 @@
   "peerDependencies": {
     "react": "catalog:",
     "react-intl": "^6.8.4",
-    "styled-components": "^5.3.0"
+    "styled-components": "catalog:"
   },
   "repository": {
     "type": "git",
