--- a/packages/itinerary-body/package.json
+++ b/packages/itinerary-body/package.json
@@ -29,7 +29,7 @@
   },
   "peerDependencies": {
     "react": "catalog:",
-    "styled-components": "^5.3.0"
+    "styled-components": "catalog:"
   },
   "bugs": {
     "url": "https://github.com/opentripplanner/otp-ui/issues"
