--- a/packages/location-field/package.json
+++ b/packages/location-field/package.json
@@ -24,7 +24,7 @@
   "peerDependencies": {
     "react": "catalog:",
     "react-intl": "^6.8.4",
-    "styled-components": "^5.3.0"
+    "styled-components": "catalog:"
   },
   "gitHead": "0af1b7cda60bd4252b219dcf893e01c2acb2ed5d",
   "scripts": {
