--- a/packages/location-icon/package.json
+++ b/packages/location-icon/package.json
@@ -15,7 +15,7 @@
   },
   "peerDependencies": {
     "react": "catalog:",
-    "styled-components": "^5.3.0"
+    "styled-components": "catalog:"
   },
   "gitHead": "644c72e0d08f8daf93b44eaf0deec88a1e16f414",
   "scripts": {
