--- a/packages/park-and-ride-overlay/package.json
+++ b/packages/park-and-ride-overlay/package.json
@@ -27,6 +27,6 @@
     "react": "catalog:",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.0.15",
-    "styled-components": "^5.3.0"
+    "styled-components": "catalog:"
   }
 }
