--- a/packages/stops-overlay/package.json
+++ b/packages/stops-overlay/package.json
@@ -32,7 +32,7 @@
     "react": "catalog:",
     "react-intl": "^6.8.4",
     "react-map-gl": "^7.0.15",
-    "styled-components": "^5.3.0"
+    "styled-components": "catalog:"
   },
   "gitHead": "0af1b7cda60bd4252b219dcf893e01c2acb2ed5d"
 }
