--- a/packages/transit-vehicle-overlay/package.json
+++ b/packages/transit-vehicle-overlay/package.json
@@ -21,7 +21,7 @@
     "react": "catalog:",
     "react-intl": "^6.8.4",
     "react-map-gl": "^7.0.15",
-    "styled-components": "^5.3.0"
+    "styled-components": "catalog:"
   },
   "repository": {
     "type": "git",
