--- a/packages/trip-details/package.json
+++ b/packages/trip-details/package.json
@@ -23,7 +23,7 @@
   "peerDependencies": {
     "react": "catalog:",
     "react-intl": "^6.8.4",
-    "styled-components": "^5.3.0"
+    "styled-components": "catalog:"
   },
   "bugs": {
     "url": "https://github.com/opentripplanner/otp-ui/issues"
