--- a/packages/trip-form/package.json
+++ b/packages/trip-form/package.json
@@ -31,7 +31,7 @@
   "peerDependencies": {
     "react": "catalog:",
     "react-intl": "^6.8.4",
-    "styled-components": "^5.3.0"
+    "styled-components": "catalog:"
   },
   "repository": {
     "type": "git",
