--- a/packages/zoom-based-markers/package.json
+++ b/packages/zoom-based-markers/package.json
@@ -29,7 +29,7 @@
   "peerDependencies": {
     "react": "catalog:",
     "react-map-gl": "^7.0.15",
-    "styled-components": "^5.3.0"
+    "styled-components": "catalog:"
   },
   "gitHead": "0af1b7cda60bd4252b219dcf893e01c2acb2ed5d"
 }
